ExamPackage/main/default/objects/Question_Pool__c/Question_Pool__c.object-meta.xml
<CustomObject>
    <label>Question Pool</label>
    <nameField>
        <label>Question Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>