ExamPackage/main/default/objects/Question_Pool__c/fields/Number_Of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Questions__c</fullName>
    <label>Number Of Questions</label>
    <summaryForeignKey>Question_Assignment__c.Question_Pool__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>