ExamPackage/main/default/objects/Question_Pool__c/fields/Question_Pool_Exam__c.field-meta.xml
<CustomField>
    <fullName>Question_Pool_Exam__c</fullName>
    <label>Question Pool Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Question Pools</relationshipLabel>
    <relationshipName>Question_Pools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>