ExamPackage/main/default/objects/Question_Pool__c/fields/Questions_to_Pull__c.field-meta.xml
<CustomField>
    <fullName>Questions_to_Pull__c</fullName>
    <description>Amount of questions to pull from the pool.</description>
    <label>Questions to Pull</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>